--- a/templates/test_result.html
+++ b/templates/test_result.html
@@ -26,7 +26,7 @@
     <div class="image-container">
         <div class="original-image">
             <h2>Original Image</h2>
-            <img src="{{ url_for('static', filename='uploads/original_img.png') }}" alt="Original Image">
+            <img src="{{ url_for('static', filename='uploads/test_img.png') }}" alt="Original Image">
         </div>
         <div class="mask-image">
             <h2>Segmentation Mask</h2>
